--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
         <section class="section">
             <h2>INTRODUCE</h2>
-            <p>Java, Spring, C# 기반의 백엔드 개발을 주력으로 하는 다재다능한 개발자입니다. <br>
+            <p>Java, Spring, C# 기반의 백엔드 개발을 주력으로 하는 개발자입니다. <br>
             백엔드뿐만 아니라 프론트엔드 개발, PM 역할, 공통 모듈 개발, 개발 서버 구축 등 프로젝트의 여러 핵심 영역을 직접 경험하며 유연하고 실용적인 개발 역량을 쌓아왔습니다.</p>
         </section>
 
