--- a/index.html
+++ b/index.html
@@ -21,17 +21,18 @@
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
             border-radius: 10px;
         }
-        .header {
-            display: flex;
-            align-items: center;
-            /* border-bottom: 2px solid #ddd;*/
-            padding-bottom: 20px;
-        }
-        .profile-img {
-            width: 300px;
-            height: 300px;
-            object-fit: cover;
-            margin-right: 30px;
+        @media (max-width: 768px) {
+           .header {
+               flex-direction: column;
+               align-items: center;
+                text-align: center;     
+           }
+            .profile-img {
+                width: 100%;
+               max-width: 200px;
+               height: auto;
+               margin: 0 0 20px 0;
+           }
         }
         .info h1 {
             margin: 0;
