--- a/index.html
+++ b/index.html
@@ -26,13 +26,14 @@
                flex-direction: column;
                align-items: center;
                 text-align: center;     
-           }
-            .profile-img {
-                width: 100%;
-               max-width: 200px;
-               height: auto;
-               margin: 0 0 20px 0;
-           }
+         }
+        .profile-img {
+        width: 100%;
+        max-width: 150px;
+        height: auto;
+        object-fit: cover;
+        border-radius: 10px;
+         }
         }
         .info h1 {
             margin: 0;
