--- a/index.html
+++ b/index.html
@@ -21,19 +21,17 @@
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
             border-radius: 10px;
         }
-        @media (max-width: 768px) {
-           .header {
-               flex-direction: column;
-               align-items: center;
-                text-align: center;     
-         }
+        .header {
+            display: flex;
+            align-items: center;
+            /* border-bottom: 2px solid #ddd;*/
+            padding-bottom: 20px;
+        }
         .profile-img {
-        width: 100%;
-        max-width: 150px;
-        height: auto;
-        object-fit: cover;
-        border-radius: 10px;
-         }
+            width: 300px;
+            height: 300px;
+            object-fit: cover;
+            margin-right: 30px;
         }
         .info h1 {
             margin: 0;
@@ -77,10 +75,10 @@
             
         }
         .job h3 {
-        margin: 15px 0 5px; /* 위쪽 마진을 15px로 증가 */
+        margin: 15px 0 5px;
         color: #0044cc;
         border-top: 2px solid #ddd;
-        padding-top: 10px; /* 제목 위쪽에 추가 공간 확보 */
+        padding-top: 10px; 
         }
         .job p {
             margin: 5px 0;
