--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
             <h2>EXPERIENCE</h2>
             <div class="jobTop" >
                 <h3>2022-08  ~ 2024-11 | S1 CRM </h3>
-                <p> 커미터 , 공통개발 , 개발서버 구축 , API 당담자 ,화면개발 </p>
-                <p>• 공통함수 및 공통화면 ,팝업 개발당담자</p>
+                <p> 커미터 , 공통개발 , 개발서버 구축 , API 담당자 ,화면개발 </p>
+                <p>• 공통함수 및 공통화면 ,팝업 개발담당자</p>
                 <p>• 소스코드 커미터</p>
                 <p>• 리포트 제작</p>
                 <p>• ERP-U 개발서버 구축 및 API 개발 </p>
@@ -219,7 +219,7 @@
             <br>
             <div class="job">
                 <h3>2021-10-28  ~ 2024-12-06 | DSK </h3>
-                <p>DSK 유지보수 및 고도화 당담</p>
+                <p>DSK 유지보수 및 고도화 담당</p>
                 <p>• DSK 출장예산 로직 고도화 및 유지보수</p>
                 <p>• LINUX 기반 BizBox Alpha 개발서버 구축 및 DB 구축 보안점검</p>
                 <div class="keywords">
@@ -234,7 +234,7 @@
             <br>
             <div class="job">
                 <h3>2021-10-28  ~ 2024-12-28  | 지학사  </h3>
-                <p>지학사  유지보수 및 고도화 당담</p>
+                <p>지학사  유지보수 및 고도화 담당</p>
                 <p>• 지학사 출판모듈 유지보수 및 고도화 </p>
                 <p>• ixeb Platform 기반 개발서버 구축 및 데이터 이전  </p>
                 <div class="keywords">
