--- a/index.html
+++ b/index.html
@@ -148,8 +148,10 @@
 
         <section class="section">
             <h2>INTRODUCE</h2>
-            <p>Java, Spring, C# 기반의 백엔드 개발을 주력으로 하는 개발자입니다. <br>
-            백엔드뿐만 아니라 프론트엔드 개발, PM 역할, 공통 모듈 개발, 개발 서버 구축 등 프로젝트의 여러 핵심 영역을 직접 경험하며 유연하고 실용적인 개발 역량을 쌓아왔습니다.</p>
+             <p>Java, Spring, C# 기반의 백엔드 개발을 주력으로 하는 개발자입니다.<br>
+             백엔드는 물론, 프론트엔드 개발과 공통 모듈 개발, PM 역할, 서버 구축까지 폭넓게 경험하며 실용적인 개발 역량을 쌓았습니다.<br>
+             다양한 핵심 영역을 직접 맡아 유연하게 대처하고, 빠르게 적응해온 경험이 제 강점입니다.
+             </p>
         </section>
 
         <section class="section">
@@ -206,7 +208,7 @@
                 <p>• 소스코드 커미터</p>
                 <p>• 리포트 제작</p>
                 <p>• ERP-U 개발서버 구축 및 API 개발 </p>
-                <p>• KNOX 전자결재 API 연동개발 및 통신서버 구축 </p>
+                <p>• 삼성 KNOX 전자결재 API 연동개발 및 통신서버 구축 </p>
                 <div class="keywords">
                 <span class="keyword">Java</span>
                 <span class="keyword">C#</span>
