--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>백종웅 - 개발자 포트폴리오</title>
+    <title>백종웅 - 포트폴리오</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
         body {
@@ -32,6 +32,7 @@
             height: 300px;
             object-fit: cover;
             margin-right: 30px;
+            border-radius: 50%; 
         }
         .info h1 {
             margin: 0;
@@ -200,15 +201,15 @@
         </section>
 
         <section class="experience">
-            <h2>EXPERIENCE</h2>
+            <h2>PROJECT</h2>
             <div class="jobTop" >
                 <h3>2022-08  ~ 2024-11 | S1 CRM </h3>
-                <p> 커미터 , 공통개발 , 개발서버 구축 , API 담당자 ,화면개발 </p>
-                <p>• 공통함수 및 공통화면 ,팝업 개발담당자</p>
-                <p>• 소스코드 커미터</p>
-                <p>• 리포트 제작</p>
-                <p>• ERP-U 개발서버 구축 및 API 개발 </p>
-                <p>• 삼성 KNOX 전자결재 API 연동개발 및 통신서버 구축 </p>
+                <p> 커미터, 공통개발, 개발서버 구축, API 개발, 화면개발 </p>
+                <p>• 삼성 KNOX 전자결재 API 개발 및 통신서버 구축으로 기존 플랫폼과 신규 플랫폼 간 원활한 연동 환경 구현</p>
+                <p>• 공통 함수, 공통 화면 및 팝업 개발 전담하여 반복적인 업무, 고객사 직급에 따른 다양한 동작 로직을 고려한 자동화 및 공통 기능 개발 </p>
+                <p>• 소스코드 커미터로서 코드 품질 관리 및 협업 흐름 유지, 단계별 백업 포인트 관리 담당 </p>
+                <p>• 사용자 요구에 맞춘 리포트 제작으로 업무 정확도 및 편의성 향상</p>
+                <p>• ERP-U 개발서버 구축 및 프로젝트에 필요한 설정 적용  </p>
                 <div class="keywords">
                 <span class="keyword">Java</span>
                 <span class="keyword">C#</span>
@@ -222,8 +223,10 @@
             <div class="job">
                 <h3>2021-10-28  ~ 2024-12-06 | DSK </h3>
                 <p>DSK 유지보수 및 고도화 담당</p>
-                <p>• DSK 출장예산 로직 고도화 및 유지보수</p>
-                <p>• LINUX 기반 BizBox Alpha 개발서버 구축 및 DB 구축 보안점검</p>
+                <p>• 기존 시스템과 맞지 않는 변경된 출장예산 업무 로직을 전체 시스템 점검 후 전면 재개발하여 안정적으로 적용 및 유지보수 수행   </p>
+                <p>• 요청된 수정 외에도 연관 로직 충돌 여부를 사전에 고객사에 공유하고 협의하며 안정적인 유지보수를 진행</p>
+                <p>• LINUX 기반 BizBox Alpha 개발서버 구축 및 서버 보안점검을 통한 랜섬웨어 방지</p>
+                <p>• 기존 복잡한 SQL 로직을 리팩토링하여 조회 성능을 크게 개선함</p>
                 <div class="keywords">
                 <span class="keyword">Java</span>
                 <span class="keyword">Spring Boot</span>
@@ -236,9 +239,10 @@
             <br>
             <div class="job">
                 <h3>2021-10-28  ~ 2024-12-28  | 지학사  </h3>
-                <p>지학사  유지보수 및 고도화 담당</p>
-                <p>• 지학사 출판모듈 유지보수 및 고도화 </p>
-                <p>• ixeb Platform 기반 개발서버 구축 및 데이터 이전  </p>
+                <p>지학사 유지보수 및 고도화 담당</p>
+                <p>• 지학사 출판모듈 유지보수 및 신규 업무 방식 도입에 대비한 확장성 높은 고도화 진행 </p>
+                <p>• 고객사 환경과 최대한 유사한 ixeb Platform 기반 개발 서버를 구축하여 사전 테스트 및 문제 대응이 가능하도록 환경 마련 </p>
+                <p>• 복잡한 SQL을 성능 개선과 확장성을 고려해 리팩토링하여 시스템 속도 향상에 기여 </p>
                 <div class="keywords">
                 <span class="keyword">Java</span>
                 <span class="keyword">Spring Boot</span>
@@ -250,8 +254,9 @@
             <div class="job">
                 <h3>2023-02~ 2024-12 | B-ERP  </h3>
                 <p>ERP 플랫폼 개발프로젝트 PM 및 개발</p>
-                <p>• 플랫폼 설계 및 구현 </p>
-                <p>• 개발자교육 </p>
+                <p>• 여러 예시와 장단점을 공유하며 플랫폼 설계 관련 신속한 합의를 도출 </p>
+                <p>• 샘플 페이지와 기초 화면에 필수 기술을 구현하여 빠른 업무 이해와 진행이 가능하도록 지원 </p>
+                <p>• 신규 적용 기술과 공통 함수에 대한 개발자 교육을 주도하여 팀 내 기술 이해도 및 개발 효율성 향상에 기여</p>
                 <div class="keywords">
                 <span class="keyword">Java</span>
                 <span class="keyword">Spring Boot</span>
@@ -263,9 +268,9 @@
             <br>
             <div class="job">
                 <h3>2024-06~ 2024-11  | 스톰테크  </h3>
-                <p>스톰테크 화면개발 , 커미터 , 레포트 제작 </p>
-                <p>• 생산관리 , 영업관리 모듈 화면 제작 </p>
-                <p>• 거래명세서 ,거래명세표 등 레포트 제작 </p>
+                <p>스톰테크 화면개발, 커미터, 레포트 제작 </p>
+                <p>• 생산관리, 영업관리 모듈 화면 제작 담당하며, 기존 엑셀 기반의 업무 방식을 요구사항에 맞게 시스템화 </p>
+                <p>• 거래명세서, 거래명세표 엑셀양식을 커스터마이징하여 시스템 내 레포트로 구현</p>
                 <div class="keywords">
                 <span class="keyword">C#</span>
                 <span class="keyword">MSSQL</span>
@@ -274,9 +279,9 @@
             <br>
             <div class="job">
                 <h3>2024-04 ~2024-12   | 씨텍  </h3>
-                <p>씨텍 화면개발 , 커미터 , 공통 개발 </p>
-                <p>• 인사관리 모듈 화면 제작 </p>
-                <p>• 공통함수 및 공통팝업 제작  </p>
+                <p>씨텍 화면개발, 커미터, 공통 개발 </p>
+                <p>• 인사관리 모듈 화면 제작 담당하며, 기존 인사업무 방식과 사용자 사용 패턴을 반영해 커스터마이징하여 시스템화</p>
+                <p>• 공통함수 및 공통팝업 제작 담당하며, 기존 컨포넌트에 없던 기능을 공통 함수로 구현하여 개발 효율성 향상</p>
                 <div class="keywords">
                 <span class="keyword">C#</span>
                 <span class="keyword">ERP-U</span>
@@ -286,10 +291,10 @@
             <br>
             <div class="job">
                 <h3>2024-09  2024-12   | 동주  </h3>
-                <p>PM , 화면개발 , 커미터 </p>
-                <p>• PM역할로 프로젝트 진행 및 일정조율 </p>
+                <p>PM, 화면개발, 커미터 </p>
+                <p>• PM으로서 프로젝트 계획 수립부터 일정 관리까지 총괄하며 원활한 진행 지원 </p>
                 <p>• 출하관리, 매출, 원가 모듈 화면개발</p>
-                <p>• 개발완료 화면 , DB 일괄반영 및 기능 테스트 </p>
+                <p>• 개발 완료된 화면과 데이터베이스를 일괄 반영하고, 업무 로직 기반으로 실제 업무 흐름에 맞춰 테스트를 진행하며 안정적인 배포 지원 </p>
                 <div class="keywords">
                 <span class="keyword">C#</span>
                 <span class="keyword">ERP-U</span>
@@ -299,8 +304,8 @@
             <br>
             <div class="job">
                 <h3>2024-10 ~2024-11   | 현대 무백스  </h3>
-                <p>PM , 개발환경 구축 , 데이터 이전  , 커미터 </p>
-                <p>• PM역할로 프로젝트 진행 및 일정조율 </p>
+                <p>PM, 개발환경 구축, 데이터 이전, 커미터 </p>
+                <p>• PM으로서 프로젝트 계획 수립부터 일정 관리까지 총괄하며 원활한 진행 지원 </p>
                 <p>• 개발환경 구축 및 샘플데이터 생성 및 이전 </p>
                 <div class="keywords">
                 <span class="keyword">C#</span>
@@ -311,8 +316,8 @@
             <br>
             <div class="job">
                 <h3>2024-09 ~ 2024-11  | 아성프라택   </h3>
-                <p>PM , 개발환경 구축 , 데이터 이전 , 커미터</p>
-                <p>• PM역할로 프로젝트 진행 및 일정조율 </p>
+                <p>PM, 개발환경 구축, 데이터 이전, 커미터</p>
+                <p>• PM으로서 프로젝트 계획 수립부터 일정 관리까지 총괄하며 원활한 진행 지원 </p>
                 <p>• 개발환경 구축 및 샘플데이터 생성 및 이전 </p>
                 <div class="keywords">
                 <span class="keyword">C#</span>
@@ -323,11 +328,10 @@
             <br>
             <div class="job">
                 <h3>2024-09 ~ 2024-12   | GIT  </h3>
-                <p>화면개발 , 커미터 , 공통 개발</p>
-                <p>• 손익관리 시스템 화면개발  </p>
+                <p>화면개발, 커미터, 공통 개발</p>
                 <p>• 출하관리, 매출, 원가 모듈 화면개발</p>
-                <p>• 공통함수 및 공통팝업 제작</p>
-                <p>• 개발완료 화면 , DB 일괄반영 및 기능 테스트 </p>
+                <p>• 자주 반복되고 여러 곳에서 사용되는 코드를 공통 함수 및 팝업으로 모듈화하여 개발 효율성 향상</p>
+                <p>• 개발 완료된 화면과 데이터베이스를 일괄 반영하고, 업무 로직 기반으로 실제 업무 흐름에 맞춰 테스트를 진행하며 안정적인 배포 지원 </p>
                 <div class="keywords">
                 <span class="keyword">C#</span>
                 <span class="keyword">ERP-U</span>
@@ -338,10 +342,10 @@
             <br>
             <div class="job">
                 <h3>2024-08 ~ 2024-12   | 한국NOF  </h3>
-                <p>화면개발 , 커미터 , 개발환경 구축 </p>
+                <p>화면개발, 커미터, 개발환경 구축 </p>
                 <p>• 영업,생산관리 화면개발  </p>
-                <p>• 전표기능 구현</p>
-                <p>• 테스트 데이터 생성 및 개발환경 구축 </p>
+                <p>• 기존 엑셀 전표를 고객 니즈에 맞춰 시스템 내 전표기능 구현</p>
+                <p>• 고객사 환경에 맞춰 실제 데이터와 유사한 테스트 데이터를 생성하고 개발환경을 구축 </p>
                 <div class="keywords">
                 <span class="keyword">C#</span>
                 <span class="keyword">ERP-U</span>
@@ -351,7 +355,7 @@
             <br>
             <div class="job">
                 <h3> 2022-08 ~  2023-02   | MOMSMEAL   </h3>
-                <p>화면개발 , 커미터 </p>
+                <p>화면개발, 커미터 </p>
                 <p>Ixeb 기반 플랫폼 A-ERP 제작 및 커미터</p>
                 <p>• ixeb Platform 기반 개발서버 구축 및 데이터 이전  </p>
                 <div class="keywords">
@@ -364,8 +368,9 @@
             
             <div class="job">
                 <h3>2021 - 06-10 ~ 2022-04-20 | 동아일보 </h3>
-                <p>출판모듈 프론트엔드,백엔드 개발자</p>
+                <p>출판모듈 개발</p>
                 <p>• DUZOON ERP10 을 이용한 개발</p>
+                <p>• 초기 프레임워크 환경에서 안정적인 시스템 구현</p>
                 <span class="keyword">Java</span>
                 <span class="keyword">Spring Boot</span>
                 <span class="keyword">Oracle SQL</span>
@@ -375,7 +380,7 @@
         </section>
 
         <footer>
-            <p>Last Updated: 2025</p>
+            <p>Last Updated: 2025-07</p>
         </footer>
     </div>
 </body>
