--- a/index.html
+++ b/index.html
@@ -129,6 +129,23 @@
     .emptyBox{
         border-bottom: 2px solid #ddd;
     }
+
+    @media (max-width: 600px) {
+      .header {
+        flex-direction: column;
+       align-items: center; 
+      }
+      .profile-img {
+        margin-right: 0;
+        margin-bottom: 20px; 
+        width: 150px;  
+        height: 150px;
+     }
+      .info {
+       text-align: center;  
+     }
+    }
+
     /*   <a href="#">🔗 GitHub</a> */
      /*  <a href="#">🔗 Blog</a>   */
     </style>
