--- a/index.html
+++ b/index.html
@@ -130,6 +130,10 @@
         border-bottom: 2px solid #ddd;
     }
 
+    section.experience ul {
+      margin-top: 20px; 
+    }
+
     @media (max-width: 600px) {
       .header {
         flex-direction: column;
@@ -144,7 +148,7 @@
       .info {
        text-align: center;  
      }
-    }
+}
 
     /*   <a href="#">🔗 GitHub</a> */
      /*  <a href="#">🔗 Blog</a>   */
@@ -166,9 +170,11 @@
 
         <section class="section">
             <h2>INTRODUCE</h2>
-             <p>Java, Spring, C# 기반의 백엔드 개발을 주력으로 하는 개발자입니다.<br>
-             백엔드는 물론, 프론트엔드 개발과 공통 모듈 개발, PM 역할, 서버 구축까지 폭넓게 경험하며 실용적인 개발 역량을 쌓았습니다.<br>
-             다양한 핵심 영역을 직접 맡아 유연하게 대처하고, 빠르게 적응해온 경험이 제 강점입니다.
+             <p>SI, SM, 차세대 ERP 개발 프로젝트 등 다양한 환경과 여러 프로젝트를 경험하며, <br>
+                Java, Spring, C# 기반 백엔드 개발을 주력으로 해왔습니다.  <br>
+                백엔드뿐 아니라 프론트엔드 개발, 공통 모듈 개발, PM 역할, 서버 구축까지 폭넓게 참여하며
+                실용적이고 유연한 개발 역량을 쌓아왔습니다. <br>
+                다양한 핵심 업무를 직접 맡아 빠르게 적응하고 문제를 해결하는 능력이 강점입니다.
              </p>
         </section>
 
