--- a/index.html
+++ b/index.html
@@ -170,12 +170,13 @@
 
         <section class="section">
             <h2>INTRODUCE</h2>
-             <p>SI, SM, 차세대 ERP 개발 프로젝트 등 다양한 환경과 여러 프로젝트를 경험하며, <br>
-                Java, Spring, C# 기반 백엔드 개발을 주력으로 해왔습니다.  <br>
-                백엔드뿐 아니라 프론트엔드 개발, 공통 모듈 개발, PM 역할, 서버 구축까지 폭넓게 참여하며
-                실용적이고 유연한 개발 역량을 쌓아왔습니다. <br>
-                다양한 핵심 업무를 직접 맡아 빠르게 적응하고 문제를 해결하는 능력이 강점입니다.
-             </p>
+            <p>
+            SI, SM, 차세대 ERP 구축 등 다양한 프로젝트를 경험하며 풀스택 개발자로 활동해왔습니다.<br>
+            Java, Spring, C# 기반의 백엔드 개발에 강점을 가지고 있으며,<br>
+            JavaScript와 HTML/CSS를 활용한 프론트엔드 개발, 공통 모듈 제작, 서버 구축, PM 역할까지 주도적으로 수행하며<br>
+             실용적이고 유연한 개발 역량을 쌓아왔습니다.<br>
+            다양한 핵심 업무를 직접 맡아 빠르게 적응하고 문제를 해결하는 능력이 강점입니다.
+            </p>
         </section>
 
         <section class="section">
