--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             Java, Spring, C# 기반의 백엔드 개발에 강점을 가지고 있으며,<br>
             JavaScript와 HTML/CSS를 활용한 프론트엔드 개발, 공통 모듈 제작, 서버 구축, PM 역할까지 주도적으로 수행하며<br>
              실용적이고 유연한 개발 역량을 쌓아왔습니다.<br>
-            다양한 핵심 업무를 직접 맡아 빠르게 적응하고 문제를 해결하는 능력이 강점입니다.
+            <strong>빠르게 적응하고 문제를 해결하는 능력이 강점입니다.</strong>
             </p>
         </section>
 
