--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         .profile-img {
             width: 300px;
             height: 300px;
-            object-fit: cover;
+            object-fit: contain;
             margin-right: 30px;
             border-radius: 50%; 
         }
