--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             margin: 5px 0;
         }
         .experience {
-            margin-top: 30px;
+            margin-top: 70px;
             border-bottom: 2px solid #ddd;
         }
         .job {
@@ -204,7 +204,7 @@
                 <div>
                     <h3>Frameworks & Libraries</h3>
                     <ul>
-                        <li>Spring Boot</li>
+                        <li>Spring Framework</li>
                         <li>jQuery</li>
                         <li>.Net</li>
                         <li>iXeb Framework</li>
@@ -253,7 +253,7 @@
                 <p>• 기존 복잡한 SQL 로직을 리팩토링하여 조회 성능을 크게 개선함</p>
                 <div class="keywords">
                 <span class="keyword">Java</span>
-                <span class="keyword">Spring Boot</span>
+                <span class="keyword">Spring</span>
                 <span class="keyword">LINUX</span>
                 <span class="keyword">BIZBOX ALPHA</span>
                 <span class="keyword">Docker</span>
@@ -269,7 +269,7 @@
                 <p>• 복잡한 SQL을 성능 개선과 확장성을 고려해 리팩토링하여 시스템 속도 향상에 기여 </p>
                 <div class="keywords">
                 <span class="keyword">Java</span>
-                <span class="keyword">Spring Boot</span>
+                <span class="keyword">Spring</span>
                 <span class="keyword">Ixeb</span>
                 <span class="keyword">MSSQL</span>
                 <span class="keyword">OzReport</span>
@@ -384,7 +384,7 @@
                 <p>• ixeb Platform 기반 개발서버 구축 및 데이터 이전  </p>
                 <div class="keywords">
                 <span class="keyword">Java</span>
-                <span class="keyword">Spring Boot</span>
+                <span class="keyword">Spring</span>
                 <span class="keyword">Ixeb</span>
                 <span class="keyword">MSSQL</span>
                 <span class="keyword">OzReport</span>
@@ -396,7 +396,7 @@
                 <p>• DUZOON ERP10 을 이용한 개발</p>
                 <p>• 초기 프레임워크 환경에서 안정적인 시스템 구현</p>
                 <span class="keyword">Java</span>
-                <span class="keyword">Spring Boot</span>
+                <span class="keyword">Spring</span>
                 <span class="keyword">Oracle SQL</span>
                 <span class="keyword">ERP10</span>
             </div>
