--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@
                 <span class="keyword">JSON</span>
                 <span class="keyword">Docker</span>
                 <span class="keyword">MSSQL</span>
+                </div>
                 
             </div>
             <br>
@@ -259,6 +260,7 @@
                 <span class="keyword">Docker</span>
                 <span class="keyword">MSSQL</span>
                 <span class="keyword">MySQL</span>
+                </div>
             </div>
             <br>
             <div class="job">
@@ -273,6 +275,7 @@
                 <span class="keyword">Ixeb</span>
                 <span class="keyword">MSSQL</span>
                 <span class="keyword">OzReport</span>
+                </div>
             </div>
             <br>
             <div class="job">
@@ -288,6 +291,7 @@
                 <span class="keyword">DevExpres</span>
                 <span class="keyword">MySQL</span>
                 <span class="keyword">TypeScript</span>
+                </div>
             </div>
             <br>
             <div class="job">
@@ -299,6 +303,7 @@
                 <span class="keyword">C#</span>
                 <span class="keyword">MSSQL</span>
                 <span class="keyword">DR Designer</span>
+                </div>
             </div>
             <br>
             <div class="job">
@@ -311,6 +316,7 @@
                 <span class="keyword">ERP-U</span>
                 <span class="keyword">SVN</span>
                 <span class="keyword">MSSQL</span>
+                </div>
             </div>
             <br>
             <div class="job">
@@ -324,6 +330,7 @@
                 <span class="keyword">ERP-U</span>
                 <span class="keyword">SVN</span>
                 <span class="keyword">MSSQL</span>
+                </div>
             </div>
             <br>
             <div class="job">
@@ -336,6 +343,7 @@
                 <span class="keyword">ERP-U</span>
                 <span class="keyword">SVN</span>
                 <span class="keyword">MSSQL</span>
+                </div>
             </div>
             <br>
             <div class="job">
@@ -348,6 +356,7 @@
                 <span class="keyword">ERP-U</span>
                 <span class="keyword">SVN</span>
                 <span class="keyword">MSSQL</span>
+                </div>
             </div>
             <br>
             <div class="job">
@@ -361,6 +370,7 @@
                 <span class="keyword">ERP-U</span>
                 <span class="keyword">SVN</span>
                 <span class="keyword">MSSQL</span>
+                </div>
             </div>
             <br>
             <br>
@@ -375,6 +385,7 @@
                 <span class="keyword">ERP-U</span>
                 <span class="keyword">SVN</span>
                 <span class="keyword">MSSQL</span>
+                </div>
             </div>
             <br>
             <div class="job">
@@ -388,6 +399,7 @@
                 <span class="keyword">Ixeb</span>
                 <span class="keyword">MSSQL</span>
                 <span class="keyword">OzReport</span>
+                </div>
             </div>
             
             <div class="job">
@@ -395,10 +407,12 @@
                 <p>출판모듈 개발</p>
                 <p>• DUZOON ERP10 을 이용한 개발</p>
                 <p>• 초기 프레임워크 환경에서 안정적인 시스템 구현</p>
+                <div class="keywords">
                 <span class="keyword">Java</span>
                 <span class="keyword">Spring</span>
                 <span class="keyword">Oracle SQL</span>
                 <span class="keyword">ERP10</span>
+                </div>
             </div>
   
         </section>
