--- a/index.html
+++ b/index.html
@@ -174,7 +174,8 @@
             SI, SM, 차세대 ERP 구축 등 다양한 프로젝트를 경험하며 풀스택 개발자로 활동해왔습니다.<br>
             Java, Spring, C# 기반의 백엔드 개발에 강점을 가지고 있으며,<br>
             JavaScript와 HTML/CSS를 활용한 프론트엔드 개발, 공통 모듈 제작, 서버 구축, PM 역할까지 주도적으로 수행하며<br>
-             실용적이고 유연한 개발 역량을 쌓아왔습니다.<br>
+            실용적이고 유연한 개발 역량을 쌓아왔습니다.<br>
+            ERP 개발 경험이 많아 복잡한 업무 로직을 효과적으로 코드로 구현하는 장점을 보유하고 있습니다.<br>
             <strong>빠르게 적응하고 문제를 해결하는 능력이 강점입니다.</strong>
             </p>
         </section>
