--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             JavaScript와 HTML/CSS를 활용한 프론트엔드 개발, 공통 모듈 제작, 서버 구축, PM 역할까지 주도적으로 수행하며<br>
             실용적이고 유연한 개발 역량을 쌓아왔습니다.<br>
             ERP 개발 경험이 많아 복잡한 업무 로직을 효과적으로 코드로 구현하는 장점을 보유하고 있습니다.<br>
-            <strong>빠르게 적응하고 문제를 해결하는 능력이 강점입니다.</strong>
+            <strong>빠르게 적응하고 문제를 해결하는 능력이 저의 강점입니다.</strong>
             </p>
         </section>
 
@@ -284,6 +284,7 @@
                 <p>ERP 플랫폼 개발프로젝트 PM 및 개발</p>
                 <p>• 여러 예시와 장단점을 공유하며 플랫폼 설계 관련 신속한 합의를 도출 </p>
                 <p>• 샘플 페이지와 기초 화면에 필수 기술을 구현하여 빠른 업무 이해와 진행이 가능하도록 지원 </p>
+                <p>• 컨포넌트의 기능 부족을 보완하고 개발 효율을 높이기 위한 공통 함수 개발 </p>
                 <p>• 신규 적용 기술과 공통 함수에 대한 개발자 교육을 주도하여 팀 내 기술 이해도 및 개발 효율성 향상에 기여</p>
                 <div class="keywords">
                 <span class="keyword">Java</span>
