--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@
                 <div class="keywords">
                 <span class="keyword">Java</span>
                 <span class="keyword">Spring</span>
+                <span class="keyword">jQuery</span>
                 <span class="keyword">Ixeb</span>
                 <span class="keyword">MSSQL</span>
                 <span class="keyword">OzReport</span>
