--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <h2>INTRODUCE</h2>
             <p>
             SI, SM, 차세대 ERP 구축 등 다양한 프로젝트를 경험하며 풀스택 개발자로 활동해왔습니다.<br>
-            Java, Spring, C# 기반의 백엔드 개발에 강점을 가지고 있으며,<br>
+            Java, Spring, C# 기반의 백엔드 개발에 강점을 가지고 있으며,,<br>
             JavaScript와 HTML/CSS를 활용한 프론트엔드 개발, 공통 모듈 제작, 서버 구축, PM 역할까지 주도적으로 수행하며<br>
             실용적이고 유연한 개발 역량을 쌓아왔습니다.<br>
             ERP 개발 경험이 많아 복잡한 업무 로직을 효과적으로 코드로 구현하는 장점을 보유하고 있습니다.<br>
@@ -229,8 +229,9 @@
             <h2>PROJECT</h2>
             <div class="jobTop" >
                 <h3>2022-08  ~ 2024-11 | S1 CRM </h3>
-                <p> 커미터, 공통개발, 개발서버 구축, API 개발, 화면개발 </p>
-                <p>• 삼성 KNOX 전자결재 API 개발 및 통신서버 구축으로 기존 플랫폼과 신규 플랫폼 간 원활한 연동 환경 구현</p>
+                <p> 커미터, 공통개발, 개발서버 구축, API 연동, 화면개발 </p>
+                <p>• 삼성 KNOX 전자결재 API와 동일한 규격의 통신 개발서버를 구축하고, RESTful 방식의 API 연동 로직을 설계·구현하여 시스템 간 안정적인 통신 환경을 마련함</p>
+                <p>• KNOX 전자결재 API와 연동되는 신규 거래처 등록 전자결재 화면을 구현하여, 결재선 자동 호출, 양식 자동 생성, 데이터 연동 기능을 통해 실제 업무 프로세스를 시스템화</p> 
                 <p>• 공통 함수, 공통 화면 및 팝업 개발 전담하여 반복적인 업무, 고객사 직급에 따른 다양한 동작 로직을 고려한 자동화 및 공통 기능 개발 </p>
                 <p>• 소스코드 커미터로서 코드 품질 관리 및 협업 흐름 유지, 단계별 백업 포인트 관리 담당 </p>
                 <p>• 사용자 요구에 맞춘 리포트 제작으로 업무 정확도 및 편의성 향상</p>
@@ -240,6 +241,7 @@
                 <span class="keyword">C#</span>
                 <span class="keyword">ERP-U</span>
                 <span class="keyword">JSON</span>
+                <span class="keyword">RESTful</span>
                 <span class="keyword">Docker</span>
                 <span class="keyword">MSSQL</span>
                 </div>
@@ -249,10 +251,11 @@
             <div class="job">
                 <h3>2021-10-28  ~ 2024-12-06 | DSK </h3>
                 <p>DSK 유지보수 및 고도화 담당</p>
-                <p>• 기존 시스템과 맞지 않는 변경된 출장예산 업무 로직을 전체 시스템 점검 후 전면 재개발하여 안정적으로 적용 및 유지보수 수행   </p>
+                <p>• 고객사의 업무 처리 방식 변경에 따라 발생한 로직 불일치를 분석하고, 고객사와 협의해 새로운 처리 흐름을 정의하고 적용</p>
+                <p>• 기존 시스템과 맞지 않게 변경된 출장예산 처리 로직을 전체 시스템 흐름에 맞게 점검 및 재설계하여 안정적으로 반영하고 유지보수 수행</p>
                 <p>• 요청된 수정 외에도 연관 로직 충돌 여부를 사전에 고객사에 공유하고 협의하며 안정적인 유지보수를 진행</p>
                 <p>• LINUX 기반 BizBox Alpha 개발서버 구축 및 서버 보안점검을 통한 랜섬웨어 방지</p>
-                <p>• 기존 복잡한 SQL 로직을 리팩토링하여 조회 성능을 크게 개선함</p>
+                <p>• 기존 비효율적인 SQL 로직을 리팩토링하여 조회 성능을 크게 개선함</p>
                 <div class="keywords">
                 <span class="keyword">Java</span>
                 <span class="keyword">Spring</span>
@@ -267,7 +270,7 @@
             <div class="job">
                 <h3>2021-10-28  ~ 2024-12-28  | 지학사  </h3>
                 <p>지학사 유지보수 및 고도화 담당</p>
-                <p>• 지학사 출판모듈 유지보수 및 신규 업무 방식 도입에 대비한 확장성 높은 고도화 진행 </p>
+                <p>• 지학사 출판모듈 유지보수 및 신규 업무 방식 도입에 대비한 확장성을 고려한 고도화 진행 </p>
                 <p>• 고객사 환경과 최대한 유사한 ixeb Platform 기반 개발 서버를 구축하여 사전 테스트 및 문제 대응이 가능하도록 환경 마련 </p>
                 <p>• 복잡한 SQL을 성능 개선과 확장성을 고려해 리팩토링하여 시스템 속도 향상에 기여 </p>
                 <div class="keywords">
