--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                 <h3>2021-10-28  ~ 2024-12-06 | DSK </h3>
                 <p>DSK 유지보수 및 고도화 담당</p>
                 <p>• 고객사의 업무 처리 방식 변경에 따라 발생한 로직 불일치를 분석하고, 고객사와 협의해 새로운 처리 흐름을 정의하고 적용</p>
-                <p>• 기존 시스템과 맞지 않게 변경된 출장예산 처리 로직을 전체 시스템 흐름에 맞게 점검 및 재설계하여 안정적으로 반영하고 유지보수 수행</p>
+                <p>• 기존 시스템과 맞지 않게 변경된 출장예산 처리 로직을 전체 시스템 흐름에 맞게 점검 및 재설계하여 안정적으로 반영</p>
                 <p>• 요청된 수정 외에도 연관 로직 충돌 여부를 사전에 고객사에 공유하고 협의하며 안정적인 유지보수를 진행</p>
                 <p>• LINUX 기반 BizBox Alpha 개발서버 구축 및 서버 보안점검을 통한 랜섬웨어 방지</p>
                 <p>• 기존 비효율적인 SQL 로직을 리팩토링하여 조회 성능을 크게 개선함</p>
