--- a/index.html
+++ b/index.html
@@ -285,8 +285,8 @@
             <div class="job">
                 <h3>2023-02~ 2024-12 | B-ERP  </h3>
                 <p>ERP 플랫폼 개발프로젝트 PM 및 개발</p>
-                <p>• 여러 예시와 장단점을 공유하며 플랫폼 설계 관련 신속한 합의를 도출 </p>
-                <p>• 샘플 페이지와 기초 화면에 필수 기술을 구현하여 빠른 업무 이해와 진행이 가능하도록 지원 </p>
+                <p>• 여러 예시와 장단점을 공유하며 플랫폼 설계 관련 합의를 도출 </p>
+                <p>• 샘플 페이지와 기초 화면에 기술을 구현하며 빠른 업무 이해와 진행이 가능하도록 지원 </p>
                 <p>• 컨포넌트의 기능 부족을 보완하고 개발 효율을 높이기 위한 공통 함수 개발 </p>
                 <p>• 신규 적용 기술과 공통 함수에 대한 개발자 교육을 주도하여 팀 내 기술 이해도 및 개발 효율성 향상에 기여</p>
                 <div class="keywords">
@@ -326,7 +326,7 @@
             <div class="job">
                 <h3>2024-09  2024-12   | 동주  </h3>
                 <p>PM, 화면개발, 커미터 </p>
-                <p>• PM으로서 프로젝트 계획 수립부터 일정 관리까지 총괄하며 원활한 진행 지원 </p>
+                <p>• 프로젝트 진행계획 수립, 일정 관리를 하며 원활한 진행 지원  </p>
                 <p>• 출하관리, 매출, 원가 모듈 화면개발</p>
                 <p>• 개발 완료된 화면과 데이터베이스를 일괄 반영하고, 업무 로직 기반으로 실제 업무 흐름에 맞춰 테스트를 진행하며 안정적인 배포 지원 </p>
                 <div class="keywords">
@@ -340,7 +340,7 @@
             <div class="job">
                 <h3>2024-10 ~2024-11   | 현대 무백스  </h3>
                 <p>PM, 개발환경 구축, 데이터 이전, 커미터 </p>
-                <p>• PM으로서 프로젝트 계획 수립부터 일정 관리까지 총괄하며 원활한 진행 지원 </p>
+                <p>• 프로젝트 진행계획 수립, 일정 관리를 하며 원활한 진행 지원  </p>
                 <p>• 개발환경 구축 및 샘플데이터 생성 및 이전 </p>
                 <div class="keywords">
                 <span class="keyword">C#</span>
@@ -353,7 +353,7 @@
             <div class="job">
                 <h3>2024-09 ~ 2024-11  | 아성프라택   </h3>
                 <p>PM, 개발환경 구축, 데이터 이전, 커미터</p>
-                <p>• PM으로서 프로젝트 계획 수립부터 일정 관리까지 총괄하며 원활한 진행 지원 </p>
+                <p>• 프로젝트 진행계획 수립, 일정 관리를 하며 원활한 진행 지원 </p>
                 <p>• 개발환경 구축 및 샘플데이터 생성 및 이전 </p>
                 <div class="keywords">
                 <span class="keyword">C#</span>
